package de.ollie.ahnenbaum.core.model;

import lombok.Generated;

@Generated
public enum RelationType {
	ADOPTIVE_FATHER,
	ADOPTIVE_MOTHER,
	FATHER,
	MOTHER,
	STEP_FATHER,
	STEP_MOTHER,
}
