@startuml

title Ahnenbaum Domain Diagram

'!theme mono
'COMMENT - skinparam linetype ortho

class Gender {

	String name NOT NULL & UNIQUE

}

class Person {

	String birthName NOT NULL
	LocalDateTime dateOfBirth
	LocalDateTime dateOfDeath
	String firstName NOT NULL
	String lastName NOT NULL

}

class Place {

	String name NOT NULL & UNIQUE

}

class Profession {

	String name NOT NULL & UNIQUE

}

class PersonProfession {

	LocalDateTime from
	LocalDateTime to

}

class Relation {
}

enum RelationType {

	ADOPTIVE_FATHER,
	ADOPTIVE_MOTHER,
	FATHER,
	MOTHER,
	STEP_FATHER,
	STEP_MOTHER;

}

Person --> "0..1" Place : bornInPlace 
Person --> "0..1" Place : diedInPlace
Person -LEFT-> "1" Gender : gender

PersonProfession -LEFT-> "1" Person : person
PersonProfession -DOWN-> "1" Profession : profession

Relation --> "1" Person : person
Relation --> "1" Person : inRelationWith
Relation -UP-> "1" RelationType : relationType


@enduml